testing out multiple results, fixed the element to scroll on overflow

--- a/client/src/pages/Discover/DiscoverPage.scss
+++ b/client/src/pages/Discover/DiscoverPage.scss
@@ -20,6 +20,7 @@
 }
 
 .discover-search-sect {
+  max-height: 625px;
   .container {
     width: 100%;
     display: flex;
@@ -108,10 +109,14 @@
     .discover-search-results {
       width: 100%;
       display: flex;
+      max-height: 350px; 
+      overflow-y: scroll;
+      overflow-x: hidden;
       align-items: center;
       margin-bottom: 1.75rem;
       flex-direction: column;
       justify-content: center;
+      padding: 8.5rem 0 1.5rem 0;
       .discover-result {
         width: 90%;
         display: flex;
